    chain-launching mode.  These babies are dead and let's just move on
    folks....  By keeping them in there, I'm afraid people will think it's
    okay to use them.  It's not.  They're WAY out of date.  Also, thanks to a
    smarter way of handling key grabbing configuration in bbconf, we don't
    have to hang bbkeys while keygrabs are being configured. [vanRijn]

version 0.8.3 --

  - changing external app launch order--we go bbconf, bbkeysconf,
    bbkeysConfigGtk, rxvt, xterm... *phew*

  - fix in stackmenu.cc (hopefully we got it this time?) to fix segfaults
    on some platforms due to screwy X stuff. *shudder*


version 0.8.2 --

  - patched for matrix-style workspace navigation, updating the 0.3.5 patch written
    by Markus Ottenbacher (m.ottenbacher@gmx.de) found at
    http://homepages.compuserve.de/meottenbacher/.  Include UpWorkspace,
    DownWorkspace, LeftWorkspace and RightWorkspace as WithAction() in your
    ~/.bbkeysrc, and enable the arrangement in rows and columns in your
    bbkeys.bb as well as in bbpager.bb (usually placed under
    /usr/local/share/bbtools/) to use this functionality.  Bill Beal <beal@tunl.duke.edu>

  - fixed a bug due to an improper test for next and prev (test for key
    release).  next and prev might just be 0, so we can't do if (next)
    because the correct index of the grabSet.KeyMap might be 0 for either
    prevwindow or nextwindow keybinding and it would fail the test and not
    release the keyboard and not lower the window menu.

  - fixed a bug for the window list popup menu--sticky window bug where
    sticky windows would show up twice on their originating windows but not
    at all on the workspace that you switched from immediately prior to
    switching to the window where the sticky window is "homed"...  =:)

  - xOr's new "showAllWorkspaces" option lets you see every window that you
    have on any workspace with an indicator as to what workspace that
    window is living on....  Very sweet code.
